ADD_SUBDIRECTORY (CanIf)
ADD_SUBDIRECTORY (CanTp)
ADD_SUBDIRECTORY (DtuTp)
ADD_SUBDIRECTORY (J1939Tp)
#ADD_SUBDIRECTORY (LtcTp)
ADD_SUBDIRECTORY (InnerTp)
ADD_SUBDIRECTORY (PduR)

FILE (GLOB THIS_DIR_SRC "*.c" "*.h")
SET (SOURCE_FILES ${SOURCE_FILES} ${THIS_DIR_SRC} PARENT_SCOPE)
SET (INCUDE_DIRS  ${INCUDE_DIRS} ${CMAKE_CURRENT_LIST_DIR} PARENT_SCOPE)
