ADD_SUBDIRECTORY (ucos_port)

FILE (GLOB THIS_DIR_SRC "*.c" "*.h")
SET (SOURCE_FILES ${SOURCE_FILES} ${THIS_DIR_SRC} PARENT_SCOPE)
SET (INCUDE_DIRS  ${INCUDE_DIRS} ${CMAKE_CURRENT_LIST_DIR} PARENT_SCOPE)

INSTALL (
	FILES
		${CMAKE_CURRENT_SOURCE_DIR}/usbcan.dll
		${CMAKE_CURRENT_SOURCE_DIR}/usbcan_dummy.dll
	DESTINATION ${PROJECT_BINARY_DIR}/applications/${BUILD_APP}
)